src/menu/snapshots/tvision__menu__menu_bar__tests__snapshot_bar_highlight_and_disabled.snap
---
source: src/menu/menu_bar.rs
expression: "render(&mut bar, 24, 1)"
---
size: 24x1
cursor: hidden
text:
|  File  Edit  Window    |
attr:
|aabaaaacdcccceeeeeeeeaaa|
legend:
  . default
  a fg=BIOS(0) bg=BIOS(7)
  b fg=BIOS(4) bg=BIOS(7)
  c fg=BIOS(0) bg=BIOS(2)
  d fg=BIOS(4) bg=BIOS(2)
  e fg=BIOS(8) bg=BIOS(7)
