src/menu/snapshots/tvision__menu__menu_bar__tests__snapshot_bar_narrow_drops_overflowing_item.snap
---
source: src/menu/menu_bar.rs
expression: "render(&mut bar, 8, 1)"
---
size: 8x1
cursor: hidden
text:
|  File  |
attr:
|aabaaaaa|
legend:
  . default
  a fg=BIOS(0) bg=BIOS(7)
  b fg=BIOS(4) bg=BIOS(7)
